@@ -1380,6 +1380,9 @@
                   "ignore_above": 1024,
                   "type": "keyword"
                 },
+                "pgid": {
+                  "type": "long"
+                },
                 "pid": {
                   "type": "long"
                 },
